# Ymir

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  ymir_project.cpp  ymir_project.h
